# tari-l2

./: .claude_code_rules  .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  INTERFACE_GUIDE.md  QUICK_START.md  README.md  README_TESTNET.md  STATUS.md  TESTING.md  TESTNET_GUIDE.md  TESTNET_LAUNCH.md  WALLET_GUIDE.md  check_balance.sh  config.toml  query_base_node.sh  run-with-testnet.sh  start-web.sh  test-client.sh  test_second_wallet.sh  test_wallet.sh  test_your_wallet.sh
crates/common/: Cargo.toml
crates/common/src/: crypto.rs  error.rs  lib.rs  types.rs
crates/l1-client/: Cargo.toml
crates/l1-client/src/: config.rs  lib.rs
crates/l2-node/: Cargo.toml
crates/l2-node/src/: config.rs  lib.rs  main.rs  node.rs  tari_client.rs
crates/marketplace/: Cargo.toml
crates/marketplace/src/: auth.rs  escrow.rs  lib.rs  manager.rs  profile.rs  storage.rs  wallet.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: behaviour.rs  handler.rs  lib.rs  messages.rs  network.rs  swarm_manager.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: api.rs  lib.rs  server.rs
crates/state-channel/: Cargo.toml
crates/state-channel/src/: channel.rs  lib.rs  state.rs  update.rs
docs/: index.html
examples/: check_address.rs  marketplace_cli.rs  marketplace_demo.rs
scripts/: deploy_testnet.sh  stop_testnet.sh  test_nodes.sh
testnet_data/node1/: config.toml
testnet_data/node2/: config.toml
testnet_data/node3/: config.toml
tests/: integration_test.rs
web/: README.md  app.js  check_wallet.html  index.html  marketplace.html  recover_wallet.html  style.css  test-data.js  wallet.html
