[package]
name = "tari-l2-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_arrays.workspace = true
blake3.workspace = true
curve25519-dalek.workspace = true
ed25519-dalek.workspace = true
thiserror.workspace = true
hex.workspace = true
chrono.workspace = true
rand.workspace = true
bs58 = "0.5"
sha2 = "0.10"
