[package]
name = "tari-l2-l1-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tonic = "0.10"
prost = "0.12"
blake3 = "1.5"
tracing = "0.1"
async-trait = "0.1"
tari-l2-common = { path = "../common" }
minotari_app_grpc = { git = "https://github.com/tari-project/tari.git", branch = "development" }
