[package]
name = "tari-l2-l1-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tonic = "0.10"
prost = "0.12"
blake3 = "1.5"
tracing = "0.1"
async-trait = "0.1"
tari-l2-common = { path = "../common" }
minotari_app_grpc = { git = "https://github.com/tari-project/tari.git", branch = "development" }
minotari_wallet_grpc_client = { git = "https://github.com/tari-project/tari.git", branch = "development" }
tari_common_types = { git = "https://github.com/tari-project/tari", branch = "development" }
tari_crypto = "0.22.1"
tari_transaction_components = { git = "https://github.com/tari-project/tari", branch = "development" }
