[package]
name = "tari-l2-marketplace"
version.workspace = true
edition.workspace = true

[dependencies]
tari-l2-common = { path = "../common" }
tari-l2-state-channel = { path = "../state-channel" }
tari-l2-l1-client = { path = "../l1-client" }
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
sled.workspace = true
uuid.workspace = true
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile.workspace = true
hex.workspace = true

[[example]]
name = "marketplace_demo"
path = "../../examples/marketplace_demo.rs"

[[example]]
name = "marketplace_cli"
path = "../../examples/marketplace_cli.rs"
