[package]
name = "tari-l2-p2p"
version.workspace = true
edition.workspace = true

[dependencies]
tari-l2-common = { path = "../common" }
tari-l2-state-channel = { path = "../state-channel" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
libp2p.workspace = true
bincode.workspace = true
blake3.workspace = true
futures = "0.3"
