[package]
name = "tari-l2-rpc"
version.workspace = true
edition.workspace = true

[dependencies]
tari-l2-common = { path = "../common" }
tari-l2-state-channel = { path = "../state-channel" }
tari-l2-marketplace = { path = "../marketplace" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
tonic.workspace = true
prost.workspace = true
hex.workspace = true

[build-dependencies]
tonic-build = "0.12"
